fix margins on mobile, thanks @matloob

--- a/themes/gophercon/static/2016/css/theme-gophercon.css
+++ b/themes/gophercon/static/2016/css/theme-gophercon.css
@@ -107,6 +107,10 @@ nav {
 .no-loader .loader {
   display: none !important;
 }
+.row {
+	margin-left: 0;
+	margin-right: 0;
+}
 /*!
 // 3. Loader
 // --------------------------------------------------*/
